--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet"-->
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/estilos_base.css' %}">
     {% block estilos_propios %}{% endblock %}
 </head>
