--- a/static/css/estilos_asesora.css
+++ b/static/css/estilos_asesora.css
@@ -1,64 +1,55 @@
-.asesora-area1{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, auto) 15em 15em;
-    grid-template-areas: "explicacion forma"
-                         "detalles forma"
-                         "t-ubicacion forma"
-                         "ubicacion forma"
-                         "ubicacion datos";
+.asesora-contenedor{
+    display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     font-size: 1.8rem;
-}
-
-.asesora-area1 p{
-    grid-area: explicacion;
-    padding: 1em 4em;
-    text-align: justify;
-}
-
-.asesora-area1 .preguntas{
-    grid-area: detalles;
-    padding-left: 20%;
-}
-
-.asesora-area1 form{
-    grid-area: forma;
-}
-
-.asesora-area1 h3{
-    text-align: left;
-    padding: 1em 4em;
-}
-
-.asesora-area1 iframe{
-    grid-area: ubicacion;
-    height: 30em;
     width: 100%;
-    padding-left: 5em;
-    padding-bottom: 2em;
+    font-family: var(--fuente-sans);
+    justify-content: center;
+    margin-bottom: 2em;
+}
 
+.texto-asesora,
+.asesora-forma{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    padding: 1em 4em;
+    min-width: 22em;
+}
+
+.preguntas{
+    padding-left: 3em;
+}
+
+.datos-ubicacion{
+    list-style: none;
+}
+.datos-ubicacion bold{
+    font-weight: 700;
 }
 
 .asesora-forma{
-    display: flex;
     gap: 1em;
-    flex-direction: column;
-    padding: 1em;
+    padding: 1em 2em;
 }
 
 .asesora-forma textarea,
 .asesora-forma input{
     height: 2.5em;
-    width: 80%;
+    width: 100%;
     border-radius: 1em;
     border-color: hsl(214, 80%, 80%);
     border-width: 1px;
     padding: 0 1em;
 }
 
-.asesora-forma span{
-    font-weight: 700;
+@media screen and (min-width: 70rem) {
+    .asesora-forma textarea,
+    .asesora-forma input{
+        width: 80%;    
+    }
 }
 
 .asesora-forma textarea{
@@ -69,24 +60,11 @@
     padding: .5em 1em;
 }
 
-#asesora-enviar input{
+#boton-enviar{
     background-color: var(--color-dark-letra);
     color: white;
-    border-radius: .3em;
-    width: 30%;
+    border-radius: 0;
 }
-#asesora-enviar input:hover{
+#boton-enviar:hover{
     background-color: hsl(198, 100%, 27%);
-}
-
-.datos-ubicacion{
-    grid-area: datos;
-    list-style: none;
-    padding-left: 2em;
-}
-.datos-ubicacion li{
-    padding-bottom: 1em;
-}
-.datos-ubicacion bold{
-    font-weight: 700;
 }
