mejoras a la bandeja de administracion

--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet"-->
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/estilos_base.css' %}">
     {% block estilos_propios %}{% endblock %}
@@ -14,7 +13,7 @@
     <div class="icon-bar">
         {% for red_enlace in redes_enlaces %}
         {% if red_enlace.institucion == 'viceministerio' %}
-        <a class="{{ red_enlace.red }}" href="{{ red_enlace.enlace }}" target="_blank" rel="noopener noreferrer">
+        <a class="{{ red_enlace.red|lower }}" href="{{ red_enlace.enlace }}" target="_blank" rel="noopener noreferrer">
             <img src="{{ MEDIA_URL }}{{ red_enlace.red.icono }}"></a>
         {% endif %}
         {% endfor %}
@@ -34,30 +33,17 @@
             <div id="navegador-servicios" class="navegador-seccion">
                 <h2 class="navegador-label navegador-flecha">SERVICIOS</h2>
                 <div class="navegador-menu">
-                    <a href="oferta_exportable.html">
+                    <a href="{% url 'en_desarrollo' %}">
                         <h2>Oferta Exportable</h2>
                         <h3>Conoce los productos estrella de las exportaciones Bolivianas</h3>
                     </a>
-                    <a href="mapa_georeferencial.html">
-                        <h2 href=>Mapa Georeferencial</h2>
-                        <h3>Muestra las rutas de exportacion el mapa de Bolivia</h3>
+                    <a href="http://vcie.produccion.gob.bo/siexco/comex/consultaPublica/processReport.php">
+                        <h2>Consulta Dinámica</h2>
+                        <h3>Los datos de importaciones y exportaciones bolivianas</h3>
                     </a>
-                    <a id="nav-siexco"
-                        href="http://vcie.produccion.gob.bo/siexco/comex/consultaPublica/processReport.php">
-                        <h2>Consulta Dinamica</h2>
-                        <h3>Los datos de exportacion Boliviana mas precisos que encontraras</h3>
-                    </a>
-                    <a href="simulador_logistico.html">
-                        <h2>Simulador Logisitico</h2>
-                        <h3>Encuentra las rutas de exportacion más eficientes</h3>
-                    </a>
-                    <a href="estadisticas.html">
-                        <h2>Estadisiticas</h2>
+                    <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/estadistica">
+                        <h2>Estadísticas</h2>
                         <h3>Datos provistos por INE</h3>
-                    </a>
-                    <a href="mapa_descriptivo.html">
-                        <h2>Mapa Descriptivo</h2>
-                        <h3>Muestra las exportaciones a otros paises de manera descriptiva</h3>
                     </a>
                 </div>
             </div>
@@ -65,79 +51,77 @@
                 <h2 class="navegador-label navegador-flecha">INFORMACIÓN</h2>
                 <div class="navegador-menu">
                     <a href="{% url 'guia' %}">
-                        <h2>Guia del Exportador</h2>
-                        <h3>Si no sabes por donde empezar utiliza esta guia</h3>
+                        <h2>Guía del Exportador</h2>
+                        <h3>Guía completa para empezar a exportar</h3>
                     </a>
                     <a href="{% url 'boletines' %}">
                         <h2>Boletines Informativos</h2>
-                        <h3>Ofrecen informacion especifica sobre productos importantes</h3>
+                        <h3>Ofrecen información especifica sobre productos importantes</h3>
                     </a>
                     <a href="{% url 'normativa' %}">
                         <h2>Normativa</h2>
-                        <h3>Las leyes que afectan el proceso de exportacion</h3>
-                    </a>
-                    <a href="{% url 'sprocon' %}">
-                        <h2>SPROCON</h2>
-                        <h3>Sistema de Certificado de Producción Nacional de Cemento con Clinker Nacional</h3>
+                        <h3>La normativa nacional y externa para procesos de comercio</h3>
                     </a>
                     <a href="{% url 'fideicomisos' %}">
                         <h2>Fideicomisos</h2>
                         <h3>Es el instrumento legal por el cual las entidades públicas transmiten la titularidad de
                             ciertos bienes y/o derechos públicos</h3>
                     </a>
-                    <a href="brokers.html">
+                    <a href="{% url 'brokers' %}">
                         <h2>Directorio de Brokers</h2>
-                        <h3>Lista de contactos de Brokers verificados</h3>
+                        <h3>Lista de contactos de Brokers</h3>
                     </a>
                     <a href="{% url 'proveedores' %}">
                         <h2>Directorio de Proveedores</h2>
-                        <h3>Lista de contactos de Proveedores verificados</h3>
+                        <h3>Lista de contactos y actividad de Proveedores verificados</h3>
                     </a>
-                    <a href="videos.html">
+                    <a href="{% url 'videos' %}">
                         <h2>Videos Informativos</h2>
-                        <h3>Tutorial didactico para empezar a Exportar</h3>
+                        <h3>Tutoriales didácticos para empezar a Exportar</h3>
                     </a>
                     <a href="{% url 'eventos' %}">
                         <h2>Eventos</h2>
-                        <h3>Este al tanto de los proximos eventos, seminarios y convocatorias</h3>
+                        <h3>Últimos avisos los próximos eventos, seminarios y convocatorias</h3>
                     </a>
                 </div>
             </div>
             <div id="navegador-logistica" class="navegador-seccion">
                 <h2 class="navegador-label navegador-flecha">LOGÍSTICA</h2>
                 <div class="navegador-menu">
-                    <a href="logistica.html#logistica1">
-                        <h2>Logística 1</h2>
-                        <h3>Descripcion de esta logistica</h3>
+                    <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/simLogic">
+                        <h2>Simulador Logístico</h2>
+                        <h3>Encuentra las rutas de exportación más eficientes</h3>
                     </a>
-                    <a href="logistica.html#logistica2">
-                        <h2>Logística 2</h2>
-                        <h3>Descripcion de esta logistica</h3>
+                    <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/mapas">
+                        <h2>Mapa Descriptivo</h2>
+                        <h3>Muestra las exportaciones a otros paises de manera gráfica</h3>
                     </a>
-                    <a href="logistica.html#logistica3">
-                        <h2>Logística 3</h2>
-                        <h3>Descripcion de esta logistica</h3>
+                    <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/ConsultaMapa">
+                        <h2>Mapa Georeferencial</h2>
+                        <h3>Muestra las rutas de exportación el mapa de Bolivia</h3>
                     </a>
                 </div>
             </div>
             <div id="navegador-tramites" class="navegador-seccion">
                 <h2 class="navegador-label navegador-flecha">TRÁMITES</h2>
                 <div class="navegador-menu">
-                    <a href="ritex.html">
+                    <a href="{% url 'ritex' %}">
                         <h2>RITEX</h2>
-                        <h3>Emocionate por el RITEX :)</h3>
+                        <h3>Régimen Aduanero de Admisión Temporal para Perfeccionamiento Activo</h3>
                     </a>
-                    <a href="costo-bruto.html">
+                    <a href="{% url 'en_desarrollo' %}">
                         <h2>Costo Bruto de Producción</h2>
-                        <h3>Informacion importante</h3>
+                        <h3>Certificados de Costo Bruto de Producción y/o de Bienes Producidos en el País</h3>
+                    </a>
+                    <a href="{% url 'sprocon' %}">
+                        <h2>SPROCON</h2>
+                        <h3>Sistema de Certificado de Producción Nacional de Cemento con Clinker Nacional</h3>
                     </a>
                 </div>
             </div>
             <div id="navegador-vci-asesora" class="navegador-seccion">
                 <a href="{% url 'asesora' %}" class="navegador-label">VCI TE ASESORA</a>
             </div>
-            <input type="text" placeholder="Buscar..">
-            <button type="submit"><img src="{% static 'images/buscar.svg' %}"></button>
         </nav>
 
         {% block banner %}
@@ -209,50 +193,33 @@
                 <div id="footer-esquema-lista-cabeza" class="footer-esquema-lista">
                     <h2>NOSOTROS:</h2>
                     <ul>
-                        <a href="">INICIO</a>
-                        <a href="">INSTITUCIONAL</a>
-                        <a href="">VCI TE ASESORA</a>
+                        <a href="{% url 'index' %}">INICIO</a>
+                        <a href="{% url 'institucional' %}">INSTITUCIONAL</a>
+                        <a href="{% url 'asesora' %}">VCI TE ASESORA</a>
                     </ul>
                 </div>
                 <div class="footer-esquema-lista">
                     <h2>SERVICIOS</h2>
                     <ul>
-                        <a href="">Oferta Exportable</a>
-                        <a href="">Mapa Georeferencial</a>
-                        <a href="">Consulta Dinamica</a>
-                        <a href="">Simulador Logistico</a>
-                        <a href="">Estadisticas</a>
-                        <a href="">Mapa Descriptivo</a>
+                        <a href="{% url 'en_desarrollo' %}">Oferta Exportable</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/ConsultaMapa">Mapa Georeferencial</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/comex/consultaPublica/processReport.php">Consulta Dinámica</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/simLogic">Simulador Logístico</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/estadistica">Estadísticas</a>
+                        <a href="http://vcie.produccion.gob.bo/siexco/web/app.php/portal/mapas">Mapa Descriptivo</a>
                     </ul>
                 </div>
                 <div class="footer-esquema-lista">
                     <h2>INFORMACIÓN</h2>
                     <ul>
-                        <a href="">Guia del Exportador</a>
-                        <a href="">Boletines Informativos</a>
-                        <a href="">Normativa</a>
-                        <a href="">Pubacaciones</a>
-                        <a href="">SPROCON</a>
-                        <a href="">Fideicomisos</a>
-                        <a href="">Directorio de Brokers</a>
-                        <a href="">Directorio de Proveedores</a>
-                        <a href="">Videos Informativos</a>
-                        <a href="">Eventos</a>
-                    </ul>
-                </div>
-                <div class="footer-esquema-lista">
-                    <h2>TRAMITES</h2>
-                    <ul>
-                        <a href="">RITEX</a>
-                        <a href="">Costo Bruto de Producción</a>
-                    </ul>
-                </div>
-                <div class="footer-esquema-lista">
-                    <h2>LOGISTICA</h2>
-                    <ul>
-                        <a href="">Logistica 1</a>
-                        <a href="">Logistica 2</a>
-                        <a href="">Logistica 3</a>
+                        <a href="{% url 'guia' %}">Guía del Exportador</a>
+                        <a href="{% url 'boletines' %}">Boletines Informativos</a>
+                        <a href="{% url 'normativa' %}">Normativa</a>
+                        <a href="{% url 'fideicomisos' %}">Fideicomisos</a>
+                        <a href="{% url 'brokers' %}">Directorio de Brokers</a>
+                        <a href="{% url 'proveedores' %}">Directorio de Proveedores</a>
+                        <a href="{% url 'videos' %}">Videos Informativos</a>
+                        <a href="{% url 'eventos' %}">Eventos</a>
                     </ul>
                 </div>
             </div>
