--- a/inicio/templates/index.html
+++ b/inicio/templates/index.html
@@ -21,16 +21,16 @@
         </div>
         <div class="slider-item">
             <picture>
-                <source media="(min-width: 720px)" srcset="{% static 'images/imagen2_azucar.jpg' %}">
+                <source media="(min-width: 720px)" srcset="{% static 'images/imagen2_castaña.jpg' %}">
                 <source media="(max-width: 719px)" srcset="{% static 'images/blank.gif' %}" sizes="100%">
-                <img src="{% static 'images/imagen2_azucar.jpg' %}" alt="slider-azucar">
+                <img src="{% static 'images/imagen2_castaña.jpg' %}" alt="slider-castana">
              </picture>
         </div>
         <div class="slider-item">
             <picture>
-                <source media="(min-width: 720px)" srcset="{% static 'images/imagen3_papa.jpg' %}">
+                <source media="(min-width: 720px)" srcset="{% static 'images/imagen3_cafe.webp' %}">
                 <source media="(max-width: 719px)" srcset="{% static 'images/blank.gif' %}" sizes="100%">
-                <img src="{% static 'images/imagen3_papa.jpg' %}" alt="slider-papa">
+                <img src="{% static 'images/imagen3_cafe.webp' %}" alt="slider-cafe">
              </picture>
         </div>
         <div class="slider-item">
@@ -71,7 +71,7 @@
     <div class="index-servicios-contenedor">
         {% for servicio in servicios %}
 
-        <a class="index-servicios-celda" href="{{ servicio.get_absolute_url }}">
+        <a class="index-servicios-celda" href="{{ servicio.enlace }}" style="background-color: {{ servicio.color }};">
             <h1>{{ servicio.nombre }}</h1>
             <div>
                 <img src="{{ MEDIA_URL }}{{ servicio.icono }}" alt="{{ servicio.nombre }}">
@@ -209,7 +209,6 @@
     "use strict"
     const titulo = document.querySelector(".contenedor-titulo");
     const logos = document.querySelector(".contenedor-logos");
-    const modal = document.querySelector(".modal");
     const modal_imagen = document.querySelector(".modal-body");
     const backdrop = document.querySelector(".modal-backdrop");
     const slides = document.querySelector("#contenedor-slides");
@@ -217,13 +216,12 @@
 
 
     window.onload = function () {
-        setInterval(() => { mover(titulo); }, 500);
-        setInterval(() => { mover(logos); }, 2000);
-        setInterval(() => { mover(banner_bg); }, 2800);
-        setInterval(() => { mover(slides); }, 3000);
-        setInterval(() => { mostrar(modal); }, 6500);
-        setInterval(() => { mostrar(modal_imagen); }, 7000);
-        setInterval(() => { mostrar(backdrop); }, 7000);
+        setInterval(() => { mover(titulo); }, 1500);
+        setInterval(() => { mover(logos); }, 3000);
+        setInterval(() => { mover(banner_bg); }, 3800);
+        setInterval(() => { mover(slides); }, 4000);
+        setInterval(() => { mostrar(modal_imagen); }, 300);
+        setInterval(() => { mostrar(backdrop); }, 300);
     };
 
     function mover(b) {
