--- a/institucional/templates/institucional.html
+++ b/institucional/templates/institucional.html
@@ -8,27 +8,17 @@
 {% block contenido %}
 <h1 class="titulo-principal-contenido">VICEMINISTERIO DE COMERCIO INTERNO</h1>
 <h2 class="insti-sub">VISIÓN ESTRATEGICA</h2>
-<div class="vision-estrategica">    
-    <div id="quien">
-        <h2>¿Quienes somos?</h2>
-        <p>{{ quienes.contenido }}</p>
+<div class="vision-estrategica">
+    {% for texto in textos %}    
+    <div class="seccion-texto">
+        <h2>{{ texto.titulo }}</h2>
+        <p>{{ texto.contenido|linebreaks }}</p>
     </div>
-    <div id="mision">
-        <h2>Mision</h2>
-        <p>{{ mision.contenido }}</p>
-    </div>
-    <div id="objetivos">
-        <h2>Objetivos</h2>
-        <p>{{ objetivos.contenido|linebreaks }}</p>
-    </div>
-</div>
-<h2 class="insti-sub">EXPLICACIÓN DE LA ESTRUCTURA DEL VICEMINISTERIO</h2>
-<div id="organizacion">    
-    <p>{{ organizacion.contenido|linebreaks }}</p>
+    {% endfor %}
 </div>
 
 
-<h2 class="titulo-organigrama">Organización</h2>
+<h2 class="insti-sub">Organización</h2>
 <div class="contenedor-perfiles seccion1">
     {% for funcionario in funcionarios1 %}
     <div class="perfil">
