--- a/informacion/templates/normativa.html
+++ b/informacion/templates/normativa.html
@@ -34,7 +34,7 @@
                 </td>
                 <td>{{ norma.titulo }}</td>
                 <td>{{ norma.fecha }}</td>                
-                <td>{{ norma.descripcion }}</td>
+                <td class="justificar">{{ norma.descripcion }}</td>
             </tr>
             {% endfor %}
         </tbody>
