--- a/static/css/estilos_fideicomisos.css
+++ b/static/css/estilos_fideicomisos.css
@@ -1,33 +1,23 @@
 .contenido{
-    padding: 0 5em;
     text-align: justify;
-    font-size: 1.8rem;  
+    font-size: 1.8rem;
+    padding: 0 3em;
+    padding-bottom: 3em;  
 }
 
-.contenido>text{      
-    padding: 1em 0;
-}
-.fideicomiso-descripcion{
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-areas: "titulo-fid caract" "fid-desc fid-cond";
-    width: 90%;
+.fideicomiso-contenedor{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2em;
     justify-self: center;
-    padding: 2em 0;
+    margin-top: 2em;
 }
 
-.fideicomiso-descripcion>h1{
-    grid-area: titulo-fid;
-    font-size: 2rem;
-    background-color: var(--color-dark-letra);
-    padding:0.6em 0 0.5em 1em;
-    color: white;
-    width: 50%;
-    font-weight: 100;
-    margin-bottom: 1em;
-}
-.fideicomiso-descripcion>h2{
-    grid-area: caract;
+@media screen and (min-width: 70rem) {
+    .fideicomiso-contenedor{
+        flex-direction: row;
+    }
 }
 
 bold{
@@ -35,10 +25,28 @@ bold{
 }
 
 .fid1{
-    grid-area: fid-desc;
-    padding-right: 2em;
+    flex: 3;
 }
 
 .fid2{
-    grid-area: fid-cond;
+    flex: 2;
+}
+
+.fid1>h1{
+    font-size: 2rem;
+    background-color: var(--color-dark-letra);
+    padding:0.6em 0 0.5em 1em;
+    color: white;
+    width: 100%;
+    font-weight: 100;
+    margin-bottom: 1em;
+}
+
+@media screen and (min-width: 70rem) {
+    .fid1>h1{
+        width: 50%;
+    }
+    .fid2{
+        padding-top: 3em;
+    }
 }
