--- a/tramites/templates/sprocon.html
+++ b/tramites/templates/sprocon.html
@@ -16,13 +16,13 @@
     </text>
     <h2>Sistema de Certificado de Producción Nacional de Cemento con Clinker Nacional "SPROCON"</h2>
     <div class="sprocon-anuncio">
-        <div class="sprocon-logo">
+        <div class="sprocon-descripcion">
             <img src="{% static 'images/sprocon.png' %}">
             <text>Este sistema ha sido diseñado para operativizar el procedimiento de solicitud y obtención del
                 Certificado
                 de Producción Nacional de Cemento Portland y/o Puzolánico con Clinker 100% de Origen Nacional.
                 <br><br>
-                Certificaión que respalda el origen del clinker nacional para la construcción de obras de
+                Certificación que respalda el origen del clinker nacional para la construcción de obras de
                 infraestructura civil, productiva y
                 social, asi como infraestructura complementaria y su mantenimiento, cuya aplicación está
                 orientada a
