--- a/static/css/estilos_sprocon.css
+++ b/static/css/estilos_sprocon.css
@@ -1,21 +1,22 @@
 .contenido{
-    padding: 0 5em;
-    font-size: 1.9rem;
+    padding: 0 1em;
+    font-size: 2rem;
+}
+
+.contenido>text{
+    text-align: justify;
 }
 
 .contenido>h1{
     text-align: left;
-}
-
-.contenido text{
-    margin: 1em 0;
+    margin-bottom: 1em;
 }
 
 .contenido>h2{
     background-color: var(--color-dark-letra);
     color: white;
     padding: 1em;
-    margin: 2em auto 0 auto;
+    margin: 2em auto;
     width: 80%;
     text-align: center;
     font-size: 2.2rem;
@@ -23,31 +24,27 @@
 
 .sprocon-anuncio{
     display: flex;
-    padding: 2em 0;
+    flex-direction: column;
+    gap: 2em;
+    margin-bottom: 3em;
 }
 
-.sprocon-logo{
+.sprocon-descripcion{
     text-align: justify;
-}
-
-.sprocon-logo{
     justify-self: center;
-    padding: 1em;
     flex: 3;
 }
 
-.sprocon-logo>img{
+.sprocon-descripcion>img{
     float: left;
-    width: 40%;
+    width: 100%;
     margin-right: 1em;
     margin-bottom: 1em;
 }
 
 .sprocon-contacto{
     flex: 1;
-    padding-right: 4em;
     font-size: 1.6rem;
-    margin: auto 0;
     text-align: right;
 }
 
@@ -56,13 +53,21 @@
 }
 .sprocon-contacto>ul li {
     position: relative;
-    padding: 0.4em 0.3em;
-    border-radius: 0.1em;
+    padding-bottom: .5em;
 }
 
-.sprocon-contacto h2{
-    font-size: inherit;
-    font-weight: 400;
-    padding-bottom: 1em;
+.sprocon-contacto>h2{
+    font-size: 2rem;
 }
 
+@media screen and (min-width: 70rem) {
+    .sprocon-anuncio{
+        flex-direction: row;
+    }
+    .contenido{
+        padding: 0 5em;
+    }
+    .sprocon-descripcion>img{
+        width: 40%;
+    }
+}
